--- a/css/ie-7.css
+++ b/css/ie-7.css
@@ -1,63 +1,29 @@
-@charset "utf-8";
-/* CSS Document */
-.ul-2, .footer-column ul, #product-container .product-info-column li {
-	margin-left:15px;
-}
-#related-articles ul{margin-left:0}
-
-#footer-email input[type=text]{height:16px;}
-#footer-email input[type=submit]{height: 30px;}
-#prod-list-wysiwyg {line-height: normal!important;}
+@charset utf-8;
+.ul-2,.footer-column ul,#product-container .product-info-column li{margin-left:15px}
+#footer-email input[type=text]{height:16px}
+#footer-email input[type=submit]{height:30px}
+#prod-list-wysiwyg{line-height:normal!important}
 #mini-basket-items{max-height:none}
-.yellow-btn{height:45px !important; margin-left:0; padding-top:10px !important;}
-#reset-password  .yellow-button{margin-top:25px}
-.faq-content .question-input {margin-left:-67px!important; margin-bottom:30px!important;}
-.faq-content .yellow-btn{top:-30px;}
-#my-account-register-form p{float: none!important}
-.history-list ul{margin-left:0px!important;}
-.manage-delivery-titles{margin-left:0}
-.manage-address-wrapper UL{float:none!important; margin-left:0!important}
+.yellow-btn{height:45px!important;margin-left:0;padding-top:10px!important}
+#reset-password .yellow-button{margin-top:25px}
+.faq-content .question-input{margin-left:-67px!important;margin-bottom:30px!important}
+.faq-content .yellow-btn{top:-30px}
+#my-account-register-form p{float:none!important}
+.history-list ul{margin-left:0!important}
+.manage-address-wrapper UL{float:none!important;margin-left:0!important}
 #account-manage-address .bottom-border{height:120px}
-#refer-friend-past  ul{margin-left:0}
 #account-update .yellow-button{position:relative!important}
-#account-update .btn-left{left:0!important}
-#account-update .btn-mid{left:0!important}
-#account-update .btn-right{left:0!important}
-/* T styles*/
-#checkout-login-signup input{
-	width: 215px;
-}
-
-#order-confirm-basket .check-final-price {
-	width: 60px;
-	padding-left: 0;
-	clear: both;
-}
-
-.ie-no-margin{
-	margin:0;
-}
-/*checkout-basket*/
-.promo-input{margin-left: -45px; margin-right:4px;}
-
-/*my account order */
-#items-delivered ul{
-	margin: 0;
-}
-.wishlist-basket{overflow:hidden;}
-#checkout-register-form label.register-newsletter{width:100%;}
-
-
-/*fixing forms*/
-#checkout-register-form p, #my-account-register-form p, #non-member-delivery-form p, 
-#add-address-overlay p, #edit-address-overlay p {width: 100%; padding: 10px 0;}
- #add-address-overlay select, #edit-address-overlay select, #update-newsletter select, #update-password select{ height:46px;}
-
-#members-checkout-delivery select,  #non-member-delivery-form select, #checkout-register-form select, #my-account-register-form select, #update-details select,#account-add-address-form select, #account-edit-address-form select{margin-bottom:25px}
-
-#non-member-delivery-form .yellow-button-wide {float:left!important; margin-top:20px}
-
-#delivery-info-form {width:934px}
-
-/*checkboxes*/
-#checkout-register-form checkbox, input[type=checkbox]{background-color:transparent; width: auto; border:0;}
+#checkout-login-signup input{width:215px}
+#order-confirm-basket .check-final-price{width:60px;padding-left:0;clear:both}
+.promo-input{margin-left:-45px;margin-right:4px}
+.wishlist-basket{overflow:hidden}
+#checkout-register-form label.register-newsletter{width:100%}
+#checkout-register-form p,#my-account-register-form p,#non-member-delivery-form p,#add-address-overlay p,#edit-address-overlay p{width:100%;padding:10px 0}
+#add-address-overlay select,#edit-address-overlay select,#update-newsletter select,#update-password select{height:46px}
+#members-checkout-delivery select,#non-member-delivery-form select,#checkout-register-form select,#my-account-register-form select,#update-details select,#account-add-address-form select,#account-edit-address-form select{margin-bottom:25px}
+#non-member-delivery-form .yellow-button-wide{float:left!important;margin-top:20px}
+#delivery-info-form{width:934px}
+#checkout-register-form checkbox,input[type=checkbox]{background-color:transparent;width:auto;border:0}
+#related-articles ul,.manage-delivery-titles,#refer-friend-past ul{margin-left:0}
+#account-update .btn-left,#account-update .btn-mid,#account-update .btn-right{left:0!important}
+.ie-no-margin,#items-delivered ul{margin:0}
