--- a/templates/email-templates/email-customer-wishlist.html
+++ b/templates/email-templates/email-customer-wishlist.html
@@ -88,7 +88,7 @@
                   "font-family:Arial, Helvetica, sans-serif;height:15px;width:600px;border-collapse:collapse;"
                   width="600" height="15" colspan="2"><img src=
                   "./email-img/email-gradient-t.png"
-                  style="display:block;" width="600" height="15" alt="img" /></td>
+                  style="display:block;" width="600" height="15" alt="" /></td>
                 </tr>
 
                 <tr style="background-color:#f6f6f6;" bgcolor="#F6F6F6" valign="middle"
@@ -104,7 +104,7 @@
                   "font-family:Arial, Helvetica, sans-serif;width:600px;border-collapse:collapse;"
                   bgcolor="#F6F6F6" width="600" height="15" colspan="2"><img src=
                   "./email-img/email-gradient-b.png"
-                  width="600" height="15" alt="img" /></td>
+                  width="600" height="15" alt="" /></td>
                 </tr>
               </table>
             </td>
