--- a/templates/email-templates/email-order-confirmation.html
+++ b/templates/email-templates/email-order-confirmation.html
@@ -83,7 +83,7 @@
                   "font-family:Arial, Helvetica, sans-serif;height:15px;width:600px;border-collapse:collapse;"
                   width="600" height="15" bgcolor="#F6F6F6" colspan="2"><img src=
                   "./email-img/email-gradient-t.png"
-                  style="display:block;" width="600" height="15" alt="img" /></td>
+                  style="display:block;" width="600" height="15" alt="" /></td>
                 </tr>
 
                 <tr style="background-color:#f6f6f6;" bgcolor="#F6F6F6" valign="middle"
@@ -99,7 +99,7 @@
                   "font-family:Arial, Helvetica, sans-serif;width:600px;border-collapse:collapse;"
                   bgcolor="#F6F6F6" width="600" height="15" colspan="2"><img src=
                   "./email-img/email-gradient-b.png"
-                  width="600" height="15" alt="img" /></td>
+                  width="600" height="15" alt="" /></td>
                 </tr>
               </table>
             </td>
@@ -300,7 +300,7 @@
 
                 <tr style="width:600px;background-color:#f6f6f6;" bgcolor="#F6F6F6">
                   <td style=
-                  "font-family:Arial, Helvetica, sans-serif;padding-top:10px;padding-bottom:10px;border-bottom:1px dotted #7E7E7E;width:127px;"
+                  "font-family:Arial, Helvetica, sans-serif;padding-top:10px;padding-bottom:10px;border-bottom:1px dotted #7E7E7E;width:107px;"
                   width="127"><img src="./email-img/product-80.png" style=
                   "text-align:center;margin:10px;border-color:#000000;border-width:0;-ms-interpolation-mode:bicubic;text-decoration:none;outline:none;"
                   border="0" alt="product-image" width="77" height="80" /></td>
@@ -339,8 +339,8 @@
 
                 <tr style="width:600px;background-color:#f6f6f6;" bgcolor="#F6F6F6">
                   <td style=
-                  "font-family:Arial, Helvetica, sans-serif;padding-top:10px;padding-bottom:10px;border-bottom:1px dotted #7E7E7E;width:127px;"
-                  width="127"><img src="./email-img/product-80.png" width="77" height=
+                  "font-family:Arial, Helvetica, sans-serif;padding-top:10px;padding-bottom:10px;border-bottom:1px dotted #7E7E7E;width:107px;"
+                  width="107"><img src="./email-img/product-80.png" width="77" height=
                   "80" style=
                   "text-align:center;margin:10px;border-color:#000000;border-width:0;-ms-interpolation-mode:bicubic;text-decoration:none;outline:none;"
                   border="0" alt="product-image" /></td>
@@ -394,8 +394,8 @@
 
                 <tr style="width:600px;background-color:#f6f6f6;" bgcolor="#F6F6F6">
                   <td style=
-                  "font-family:Arial, Helvetica, sans-serif;padding-top:10px;padding-bottom:10px;border-bottom:1px dotted #7E7E7E;width:127px;"
-                  width="127"><img src="./email-img/product-80.png" width="77" height=
+                  "font-family:Arial, Helvetica, sans-serif;padding-top:10px;padding-bottom:10px;border-bottom:1px dotted #7E7E7E;width:107px;"
+                  width="107"><img src="./email-img/product-80.png" width="77" height=
                   "80" style=
                   "text-align:center;margin:10px;border-color:#000000;border-width:0;-ms-interpolation-mode:bicubic;text-decoration:none;outline:none;"
                   border="0" alt="product-image" /></td>
@@ -449,12 +449,12 @@
 
                 <tr style="width:600px;background-color:#f6f6f6;" bgcolor="#F6F6F6">
                   <td height="50" style=
-                  "font-family:Arial, Helvetica, sans-serif;font-size:12px;padding-top:10px;padding-bottom:10px;border-bottom:1px dotted #7E7E7E;width:127px;"
-                  width="127"></td>
+                  "font-family:Arial, Helvetica, sans-serif;font-size:12px;padding-top:10px;padding-bottom:10px;border-bottom:1px dotted #7E7E7E;width:107px;"
+                  width="107"></td>
 
                   <td style=
-                  "font-family:Arial, Helvetica, sans-serif;font-size:12px;padding-top:10px;padding-bottom:10px;border-bottom:1px dotted #7E7E7E;width:133px;"
-                  width="333" colspan="3">Offer Name</td>
+                  "font-family:Arial, Helvetica, sans-serif;font-size:12px;padding-top:10px;padding-bottom:10px;border-bottom:1px dotted #7E7E7E;"
+                  colspan="3">Offer Name</td>
 
                   <td style=
                   "font-family:Arial, Helvetica, sans-serif;font-size:12px;padding-top:10px;padding-bottom:10px;border-bottom:1px dotted #7E7E7E;width:100px;"
@@ -463,12 +463,12 @@
 
                 <tr style="width:600px;background-color:#f6f6f6;" bgcolor="#F6F6F6">
                   <td height="50" style=
-                  "font-family:Arial, Helvetica, sans-serif;font-size:12px;padding-top:10px;padding-bottom:10px;border-bottom:1px dotted #7E7E7E;width:127px;"
-                  width="127"></td>
+                  "font-family:Arial, Helvetica, sans-serif;font-size:12px;padding-top:10px;padding-bottom:10px;border-bottom:1px dotted #7E7E7E;width:107px;"
+                  width="107"></td>
 
                   <td style=
-                  "font-family:Arial, Helvetica, sans-serif;font-size:12px;padding-top:10px;padding-bottom:10px;border-bottom:1px dotted #7E7E7E;width:133px;"
-                  width="333" colspan="3">Offer Name</td>
+                  "font-family:Arial, Helvetica, sans-serif;font-size:12px;padding-top:10px;padding-bottom:10px;border-bottom:1px dotted #7E7E7E;"
+                  colspan="3">Offer Name</td>
 
                   <td style=
                   "font-family:Arial, Helvetica, sans-serif;font-size:12px;padding-top:10px;padding-bottom:10px;border-bottom:1px dotted #7E7E7E;width:100px;"
