--- a/templates/email-templates/email-order-dispatched.html
+++ b/templates/email-templates/email-order-dispatched.html
@@ -1,117 +1,220 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<title>Order Dispatched</title>
+  <style type="text/css">
+/*<![CDATA[*/
+  .ReadMsgBody {width: 100%;}
+  .ExternalClass {width: 100%;}
 
+  body {}
+
+  span.yshortcuts { color:#000; background-color:none; border:none;}
+  span.yshortcuts:hover,
+  span.yshortcuts:active,
+  span.yshortcuts:focus {color:#000; background-color:none; border:none;}
+  /*]]>*/
+  </style>
+  <meta http-equiv="Content-Type" content="text/html; charset=us-ascii" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Order Dispatched</title>
+  <style type="text/css">
+/*<![CDATA[*/
+  .ReadMsgBody {width: 100%;}
+  .ExternalClass {width: 100%;}
+
+  body {}
+
+  span.yshortcuts { color:#000; background-color:none; border:none;}
+  span.yshortcuts:hover,
+  span.yshortcuts:active,
+  span.yshortcuts:focus {color:#000; background-color:none; border:none;}
+  /*]]>*/
+  </style>
 </head>
 
-<body style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;margin: 0;padding: 0;width: 100%; font-size:12px;">
-<table border="0" cellpadding="0" cellspacing="0" style="width:100%; border-collapse:collapse;-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;margin: 0;padding: 0; background-color:#d7dede; border-spacing:0" bgcolor="#D7DEDE" >
-	<tr align="center">
-		<td>
-			<table border="0"  style="width:600px; font-family: arial, verdana, sans-serif; border-spacing:0; font-size:12px;" cellpadding="0" cellspacing="0" >
- 				<tr style="background-color:#000000; width:600px;" bgcolor="#000000" align="left">
-    				<td style="width: 163px; height: 78px;text-align: left;border-collapse: collapse;"  width="163px" border="0">
-						<a href="http://www.scienceinsport.com/">	<img src="http://demo.spicerack.co.uk/SiS-Templates/img/ui/sis.png" alt="SIS" height="78" width="163" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic; border-width: 0; border-color:#000000; padding: 10px;" border="0" /></a>
-					</td>
-    				<td style="width: 600px;border-collapse: collapse;">			
-    				</td>
-  				</tr>
-				<tr style="background-color:#f6f6f6; width:600px;" bgcolor="#f6f6f6" height="20">
-					<td></td>
-				</tr>
-				<tr align="left">
-					<td>
-						<table border="0" style="width:600px; text-align:center;" cellpadding="0" cellspacing="0" style="border-spacing:0;" align="left">
-							<tr  style="height:15px; border-collapse:collapse;" align="left">
-								<td cellpadding="0" style="border-collapse: collapse;  width:600px; height:15px;" width="600" height="15" colspan="2">
-									<img src="http://demo.spicerack.co.uk/SiS-Templates/img/ui/email-gradient-t.png" style="display:block;" width="600" height="15" />
-								</td>
-							</tr>
-							<tr style="background-color:#f6f6f6;" bgcolor="#f6f6f6" valign="middle" align="left" >
-								<td cellpadding="0" style="border-collapse: collapse; width:600px; color: black; padding-left:20px; font-size:18px; font-weight:bold;" width="600" colspan="2" bgcolor="#ffffff" height="50" valign="middle" align="left">Email Heading message
-								</td>
-							</tr>
-							<tr align="left">
-								<td cellpadding="0" style="border-collapse: collapse; width:600px;" bgcolor="f6f6f6" width="600" height="15" colspan="2"><img src="http://demo.spicerack.co.uk/SiS-Templates/img/ui/email-gradient-b.png" width="600" height="15" />
-								</td>
-							</tr>
-						</table>
-					</td>
-				</tr>	
-				<tr>
-					<td>
-						<table border="0" style="width:600px; font-size:12px;" cellpadding="20" cellspacing="0" width="600" align="left">
-							<tr style="background-color:#f6f6f6; width:600px;" bgcolor="#f6f6f6">
-								<td cellpadding="0" style="border-collapse: collapse;" width="600" colspan="2" valign="middle" align="left">
-									[[[Customer First Name]]] [[[Customer Last Name]]]	</td>
-							</tr>
-							<tr style="background-color:#f6f6f6; width:600px;" bgcolor="#f6f6f6" width="600">
-								<td cellpadding="0" style="border-collapse: collapse;" colspan="2" align="left">[[[Customer Email Address]]]	
-								</td>
-							</tr>
-							<tr style="background-color:#f6f6f6; width:600px;" bgcolor="#f6f6f6" width="600">
-								<td cellpadding="0" style="border-collapse: collapse;text-align:left;" colspan="2" align="left">
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida rutrum mi, a viverra leo pulvinar vel. Quisque molestie lorem in ipsum congue nec interdum sem adipiscing. Cras ac elit lorem. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nam id risus massa, at faucibus neque. Aenean id nisi at nibh sagittis pulvinar sit amet in nulla. Cras aliquet lacinia aliquet. <a href="#">link text</a> Fusce imperdiet ultrices sem, vel mollis lorem gravida sed. Donec nibh enim, 
-								</td>
-							</tr>
-							<tr style="background-color:#f6f6f6; width:600px;" bgcolor="#f6f6f6" width="600">
-								<td cellpadding="0" style="border-collapse: collapse; text-align:left" colspan="2" align="left">
-									fermentum dapibus ultrices sit amet, feugiat non nulla. Suspendisse egestas mollis augue ut cursus. Nulla gravida nisi sed neque aliquet blandit at id urna. Proin luctus viverra neque auctor adipiscing. Nam euismod rutrum consectetur. Praesent ullamcorper aliquam metus eu ultricies. Curabitur sagittis erat non arcu dignissim pretium.	
-								</td>
-							</tr>
-						</table>
-					</td>
-				</tr>
-				<tr style="background-color:#f6f6f6; width:600px;" bgcolor="#f6f6f6" width="600">
-					<td>
-						<table border="0" style="width:580px; padding:20px;font-size:12px;" cellpadding="0" cellspacing="0" width="580" align="center">
-							<tr style="text-align:left;">
-								<th style="border-bottom: 1px dotted #7e7e7e;">Consignment Number</th>
-								<th style="border-bottom: 1px dotted #7e7e7e;">Carrier</th>
-								<th style="border-bottom: 1px dotted #7e7e7e;">Dispatch Date</th>
-								<th style="padding-left: 5px; border-bottom: 1px dotted #7e7e7e;">Products</th>
-							</tr>
-							<tr style="text-align:left; font-size:12px;">
-								<td valign="top" style="padding-top:10px;padding-bottom:10px;border-bottom: 1px dotted #7e7e7e;">UPS1024a</td>
-								<td valign="top" style="padding-top:10px;padding-bottom:10px;border-bottom: 1px dotted #7e7e7e;">UPS</td>
-								<td valign="top" style="padding-top:10px;padding-bottom:10px;border-bottom: 1px dotted #7e7e7e;">1 January 2011</td>
-								<td valign="top" style="padding-top:5px;padding-bottom:5px;border-bottom: 1px dotted #7e7e7e;">
-									<table border="0" cellpadding="0" cellspacing="5" align="left" style="font-size:12px;">
-										<tr>
-											<td><a href="#" style="font-weight:bold; color:#000000;">Track consignment</a></td>
-										</tr>
-										<tr>
-											<td>2 x Product Name</td>
-										</tr>
-										<tr>
-											<td>1 x Product Name</td>
-										</tr>
-										<tr>
-											<td>1 x Product Name</td>
-										</tr>
-									</table>
-								</td>
-							</tr>
-						</table>
-						
-					</td>
-				</tr>
-				
-				<tr width="600" height="50" style="background-color:#f6f6f6; width:600px;" bgcolor="#f6f6f6" >
-					<td>
+<body style=
+"font-size:12px;width:100%;padding:0;margin:0;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
+<table border="0" cellpadding="0" cellspacing="0" style=
+"border-spacing:0;background-color:#d7dede;padding:0;margin:0;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;border-collapse:collapse;width:100%;"
+  bgcolor="#D7DEDE">
+    <tr align="center">
+      <td>
+        <table border="0" style=
+        "font-size:12px;border-spacing:0;font-family:arial, verdana, sans-serif;width:600px;"
+        cellpadding="0" cellspacing="0">
+          <tr style="width:600px;background-color:#000000;" bgcolor="#000000" align=
+          "left">
+           <td>
+				<table border="0" cellpadding="0" cellspacing="0">
+					<tr>
+					<td style=
+					"font-family:Arial, Helvetica, sans-serif;border-collapse:collapse;text-align:left;height:78px;width:163px;"
+					width="163"><a href="#"><img src="./email-img/sis.png" alt="SIS"
+					height="78" width="163" style=
+					"padding:10px;border-color:#000000;border-width:0;-ms-interpolation-mode:bicubic;text-decoration:none;outline:none;"
+					border="0" /></a></td>
 		
-					</td>
-				</tr>
-				<tr style="width:600px; background-color:#000000;" bgcolor="#000000" align="left">
-					<td  style="border-collapse:collapse; color:#656565; padding-left:20px;" width="600" colspan="2" height="70" >&copy; SiS (Science in Sport) Limited, The Innovation Centre, 35 Churchill Way, Lancashire, BB9 6RT. Company reg number: 2742833, VAT reg number: GB 604598037</td>
-				</tr>
-			</table>
-		</td>
-	</tr>
-</table>
-</body></html>
+					<td width="437" style=
+					"font-family:Arial, Helvetica, sans-serif;border-collapse:collapse;width:437px;"
+					></td>
+					</tr>
+				</table>
+			</td>
+          </tr>
+
+          <tr style="width:600px;background-color:#f6f6f6;" bgcolor="#F6F6F6">
+            <td height=
+          "20">&nbsp;</td>
+          </tr>
+
+          <tr align="left">
+            <td>
+              <table border="0" style="border-spacing:0;text-align:center;width:600px;"
+              cellpadding="0" cellspacing="0" align="left">
+                <tr style="border-collapse:collapse;height:15px;" align="left">
+                  <td bgcolor="#F6F6F6" style=
+                  "height:15px;width:600px;border-collapse:collapse;" width="600" height=
+                  "15" ><img src=
+                  "./email-img/email-gradient-t.png"
+                  style="display:block;" width="600" height="15" alt="" /></td>
+                </tr>
+
+                <tr style="background-color:#f6f6f6;" bgcolor="#F6F6F6" valign="middle"
+                align="left">
+                  <td style=
+                  "font-weight:bold;font-size:18px;padding-left:20px;color:black;width:600px;border-collapse:collapse;font-family:Arial, Helvetica, sans-serif;"
+                  width="600" bgcolor="#FFFFFF" height="50" valign="middle"
+                  align="left">Email Heading message</td>
+                </tr>
+
+                <tr align="left">
+                  <td style="width:600px;border-collapse:collapse;"
+                  bgcolor="#F6F6F6" width="600" height="15" ><img src=
+                  "./email-img/email-gradient-b.png"
+                  width="600" height="15" alt="" /></td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+
+          <tr>
+            <td>
+              <table border="0" style="font-size:12px;width:600px;" cellpadding="20"
+              cellspacing="0" width="600" align="left">
+                <tr style="width:600px;background-color:#f6f6f6;" bgcolor="#F6F6F6">
+                  <td style="border-collapse:collapse;font-family:Arial, Helvetica, sans-serif;" width="600"
+                  valign="middle" align="left">[[[Customer First Name]]]
+                  [[[Customer Last Name]]]</td>
+                </tr>
+
+                <tr style="width:600px;background-color:#f6f6f6;" bgcolor="#F6F6F6"
+                >
+                  <td style="border-collapse:collapse;font-family:Arial, Helvetica, sans-serif;" 
+                  align="left">[[[Customer Email Address]]]</td>
+                </tr>
+
+                <tr style="width:600px;background-color:#f6f6f6;" bgcolor="#F6F6F6"
+                >
+                  <td style="text-align:left;border-collapse:collapse;font-family:Arial, Helvetica, sans-serif;"
+                  align="left">Lorem ipsum dolor sit amet, consectetur
+                  adipiscing elit. Sed gravida rutrum mi, a viverra leo pulvinar vel.
+                  Quisque molestie lorem in ipsum congue nec interdum sem adipiscing.
+                  Cras ac elit lorem. Pellentesque habitant morbi tristique senectus et
+                  netus et malesuada fames ac turpis egestas. Nam id risus massa, at
+                  faucibus neque. Aenean id nisi at nibh sagittis pulvinar sit amet in
+                  nulla. Cras aliquet lacinia aliquet. <a href="#">link text</a> Fusce
+                  imperdiet ultrices sem, vel mollis lorem gravida sed. Donec nibh
+                  enim,</td>
+                </tr>
+
+                <tr style="width:600px;background-color:#f6f6f6;" bgcolor="#F6F6F6"
+                >
+                  <td style="text-align:left;border-collapse:collapse;font-family:Arial, Helvetica, sans-serif;"
+                  align="left">fermentum dapibus ultrices sit amet, feugiat
+                  non nulla. Suspendisse egestas mollis augue ut cursus. Nulla gravida
+                  nisi sed neque aliquet blandit at id urna. Proin luctus viverra neque
+                  auctor adipiscing. Nam euismod rutrum consectetur. Praesent ullamcorper
+                  aliquam metus eu ultricies. Curabitur sagittis erat non arcu dignissim
+                  pretium.</td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+
+          <tr style="width:600px;background-color:#f6f6f6;" bgcolor="#F6F6F6" width=
+          "600">
+            <td>
+              <table border="0" style="font-size:12px;padding:20px;width:580px;"
+              cellpadding="0" cellspacing="0" width="580" align="center">
+                <tr style="text-align:left;">
+                  <th style="border-bottom:1px dotted #7e7e7e;font-family:Arial, Helvetica, sans-serif;">Consignment Number</th>
+
+                  <th style="border-bottom:1px dotted #7e7e7e;font-family:Arial, Helvetica, sans-serif;">Carrier</th>
+
+                  <th style="border-bottom:1px dotted #7e7e7e;font-family:Arial, Helvetica, sans-serif;">Dispatch Date</th>
+
+                  <th style="border-bottom:1px dotted #7e7e7e;padding-left:5px;font-family:Arial, Helvetica, sans-serif;">
+                  Products</th>
+                </tr>
+
+                <tr style="font-size:12px;text-align:left;">
+                  <td valign="top" style=
+                  "border-bottom:1px dotted #7e7e7e;padding-bottom:10px;padding-top:10px;font-family:Arial, Helvetica, sans-serif;">
+                  UPS1024a</td>
+
+                  <td valign="top" style=
+                  "border-bottom:1px dotted #7e7e7e;padding-bottom:10px;padding-top:10px;font-family:Arial, Helvetica, sans-serif;">
+                  UPS</td>
+
+                  <td valign="top" style=
+                  "border-bottom:1px dotted #7e7e7e;padding-bottom:10px;padding-top:10px;font-family:Arial, Helvetica, sans-serif;">
+                  1 January 2011</td>
+
+                  <td valign="top" style=
+                  "border-bottom:1px dotted #7e7e7e;padding-bottom:5px;padding-top:5px;">
+                    <table border="0" cellpadding="0" cellspacing="5" align="left" style=
+                    "font-size:12px;">
+                      <tr>
+                        <td><a href="#" style="color:#000000;font-weight:bold;font-family:Arial, Helvetica, sans-serif;">Track
+                        consignment</a></td>
+                      </tr>
+
+                      <tr>
+                        <td style="font-family:Arial, Helvetica, sans-serif;">2 x Product Name</td>
+                      </tr>
+
+                      <tr>
+                        <td style="font-family:Arial, Helvetica, sans-serif;">1 x Product Name</td>
+                      </tr>
+
+                      <tr>
+                        <td style="font-family:Arial, Helvetica, sans-serif;">1 x Product Name</td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+
+          <tr  style="width:600px;background-color:#f6f6f6;"
+          bgcolor="#F6F6F6">
+            <td height="50">&nbsp;</td>
+          </tr>
+
+          <tr style="background-color:#000000;width:600px;" bgcolor="#000000" align=
+          "left">
+            <td style="padding-left:20px;color:#656565;border-collapse:collapse;font-family:Arial, Helvetica, sans-serif;" width=
+            "600" height="70">&#169; SiS (Science in Sport) Limited, The
+            Innovation Centre, 35 Churchill Way, Lancashire, BB9 6RT.<br />Company reg number:
+            2742833, VAT reg number: GB 604598037</td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
+</body>
+</html>
