recommend friend email OK

--- a/templates/email-templates/email-recommend-friend.html
+++ b/templates/email-templates/email-recommend-friend.html
@@ -87,7 +87,7 @@
                   "font-family:Arial, Helvetica, sans-serif;height:15px;width:600px;border-collapse:collapse;"
                   width="600" height="15"  bgcolor="#F6F6F6" ><img src=
                   "./email-img/email-gradient-t.png"
-                  style="display:block;" width="600" height="15" alt="img" /></td>
+                  style="display:block;" width="600" height="15" alt="" /></td>
                 </tr>
 
                 <tr style="background-color:#f6f6f6;" bgcolor="#F6F6F6" valign="middle"
@@ -103,7 +103,7 @@
                   "font-family:Arial, Helvetica, sans-serif;width:600px;border-collapse:collapse;"
                   bgcolor="#F6F6F6" width="600" height="15" ><img src=
                   "./email-img/email-gradient-b.png"
-                  width="600" height="15" alt="img" /></td>
+                  width="600" height="15" alt="" /></td>
                 </tr>
               </table>
 
