--- a/templates/email-templates/email-registered-template.html
+++ b/templates/email-templates/email-registered-template.html
@@ -83,8 +83,8 @@
                   <td style=
                   "font-family:Arial, Helvetica, sans-serif;height:15px;width:600px;border-collapse:collapse;"
                   width="600" bgcolor="#F6F6F6" height="15" ><img src=
-                  "http://demo.spicerack.co.uk/SiS-Templates/img/ui/email-gradient-t.png"
-                  style="display:block;" width="600" height="15" alt="img" /></td>
+                  "./email-img/email-gradient-t.png"
+                  style="display:block;" width="600" height="15" alt="" /></td>
                 </tr>
 
                 <tr style="background-color:#f6f6f6;" bgcolor="#F6F6F6" valign="middle"
@@ -99,8 +99,8 @@
                   <td style=
                   "font-family:Arial, Helvetica, sans-serif;width:600px;border-collapse:collapse;"
                   bgcolor="#F6F6F6" width="600" height="15" ><img src=
-                  "http://demo.spicerack.co.uk/SiS-Templates/img/ui/email-gradient-b.png"
-                  width="600" height="15" alt="img" /></td>
+                  "./email-img/email-gradient-b.png"
+                  width="600" height="15" alt="" /></td>
                 </tr>
               </table>
             </td>
