--- a/templates/email-templates/forgotten-email-template.html
+++ b/templates/email-templates/forgotten-email-template.html
@@ -85,7 +85,7 @@
                   "font-family:Arial, Helvetica, sans-serif;height:15px;width:600px;border-collapse:collapse;"
                   width="600" height="15" bgcolor="#F6F6F6"><img src=
                   "./email-img/email-gradient-t.png" style="display:block;" width="600"
-                  height="15" alt="img" /></td>
+                  height="15" alt="" /></td>
                 </tr>
 
                 <tr style="background-color:#f6f6f6;" bgcolor="#F6F6F6" valign="middle"
@@ -101,7 +101,7 @@
                   "font-family:Arial, Helvetica, sans-serif;width:600px;border-collapse:collapse;"
                   bgcolor="#F6F6F6" width="600" height="15"><img src=
                   "./email-img/email-gradient-b.png" width="600" height="15" alt=
-                  "img" /></td>
+                  "" /></td>
                 </tr>
               </table>
 
