--- a/templates/email-templates/email-order-confirmation.html
+++ b/templates/email-templates/email-order-confirmation.html
@@ -285,7 +285,7 @@
               cellpadding="0" cellspacing="0" width="600" align="center">
                 <tr style="font-size:14px;width:600px;background-color:#f6f6f6;" bgcolor=
                 "#F6F6F6" align="left">
-                  <th style="border-bottom:dotted 1px #7e7e7e;width:260px;font-family:Arial, Helvetica, sans-serif" width="260"
+                  <th style="border-bottom:dotted 1px #7e7e7e;font-family:Arial, Helvetica, sans-serif" 
                   colspan="2" align="left">Product</th>
 
                   <th style="border-bottom:dotted 1px #7e7e7e;width:100px;font-family:Arial, Helvetica, sans-serif" width="100">
@@ -306,10 +306,9 @@
                   border="0" alt="product-image" width="77" height="80" /></td>
 
                   <td style=
-                  "font-family:Arial, Helvetica, sans-serif;padding-top:10px;padding-bottom:10px;border-bottom:1px dotted #7E7E7E;width:133px;"
-                  width="133">
-                    <table border="0" cellpadding="0" cellspacing="2" align="left" width=
-                    "133">
+                  "font-family:Arial, Helvetica, sans-serif;padding-top:10px;padding-bottom:10px;border-bottom:1px dotted #7E7E7E;"
+                  >
+                    <table border="0" cellpadding="0" cellspacing="2" align="left">
                       <tr style="background-color:#f6f6f6;" bgcolor="#F6F6F6">
                         <td style=
                         "font-family:Arial, Helvetica, sans-serif;font-size:12px;font-weight:bold;">
@@ -346,10 +345,9 @@
                   border="0" alt="product-image" /></td>
 
                   <td style=
-                  "font-family:Arial, Helvetica, sans-serif;font-size:12px;padding-top:10px;padding-bottom:10px;border-bottom:1px dotted #7E7E7E;width:133px;"
-                  width="133">
-                    <table border="0" cellpadding="0" cellspacing="2" align="left" width=
-                    "133">
+                  "font-family:Arial, Helvetica, sans-serif;font-size:12px;padding-top:10px;padding-bottom:10px;border-bottom:1px dotted #7E7E7E;"
+                  >
+                    <table border="0" cellpadding="0" cellspacing="2" align="left">
                       <tr style="font-size:12px;background-color:#f6f6f6;" bgcolor=
                       "#F6F6F6">
                         <td style=
@@ -401,10 +399,9 @@
                   border="0" alt="product-image" /></td>
 
                   <td style=
-                  "font-family:Arial, Helvetica, sans-serif;padding-top:10px;padding-bottom:10px;border-bottom:1px dotted #7E7E7E;width:133px;"
-                  width="133">
-                    <table border="0" cellpadding="0" cellspacing="2" align="left" width=
-                    "133">
+                  "font-family:Arial, Helvetica, sans-serif;padding-top:10px;padding-bottom:10px;border-bottom:1px dotted #7E7E7E;"
+                  >
+                    <table border="0" cellpadding="0" cellspacing="2" align="left" >
                       <tr style="background-color:#f6f6f6;" bgcolor="#F6F6F6">
                         <td style=
                         "font-family:Arial, Helvetica, sans-serif;font-size:12px;font-weight:bold;">
@@ -511,7 +508,7 @@
             </td>
           </tr>
 
-          <tr style="width:600px;background-color:#f6f6f6;" bgcolor="#F6F6F6">
+          <tr style="background-color:#f6f6f6;" bgcolor="#F6F6F6">
             <td height="50" style="font-family:Arial, Helvetica, sans-serif;"></td>
           </tr>
 
