--- a/css/main.css
+++ b/css/main.css
@@ -391,7 +391,7 @@ div:first-child+div>div.check-item-image{margin-top:10px}
 .product-display-box-a .product-img-a img{position:absolute;top:0;bottom:0;left:0;right:0;margin:auto}
 .product-display-box-a .product-name-a{padding-top:10px;font-size:14px}
 .product-display-box-a .product-info-a{width:74px;height:27px;background-color:#1c1c1c;text-align:center;float:left;margin-right:5px}
-.product-display-box-a .product-info-a span{color:#fff;font-size:13px;font-family:HelveticaNeueLT-Bold,Helvetica,Arial,sans-serif}
+.product-display-box-a .product-info-a span{color:#fff;font-size:13px;font-family:HelveticaNeueLT-Bold,Helvetica,Arial,sans-serif; line-height:25px}
 .product-display-box-a .product-info-a a{display:block;line-height:28px}
 .product-display-box-a .product-buy-a input[type=submit]{width:110px;background:#feea00 url(../img/ui/sign-up.gif);color:#1c1800;padding:0 25px 0 0;margin:0;line-height:27px;height:27px;border:0;font-family:HelveticaNeueLT-Bold,Helvetica,Arial,sans-serif;cursor:pointer;font-size:13px}
 .product-buy-a{width:110px;float:left}
