final pre-delivery changes

--- a/templates/xhtml-templates/10.4.6-sitemap.html
+++ b/templates/xhtml-templates/10.4.6-sitemap.html
@@ -392,7 +392,7 @@
 		<!-- #header -->
 		
 		<div id="content">
-			<div id="sitemap-content" class="lo-content">
+			<div id="sitemap-content" class="hi-content">
 				<h1 class="page-title">Sitemap</h1>
 				<div id="sitemap">
 					<ul>
