--- a/templates/css/main.css
+++ b/templates/css/main.css
@@ -369,6 +369,7 @@ div:first-child+div>div.check-item-image{margin-top:10px}
 .faq-content .question-form{display:block;float:left;margin-bottom:10px}
 .faq-content .question-input{height:27px;line-height:27px;background-color:#ddd;border:1px solid #cacaca;margin:0;padding-left:5px;color:grey}
 .faq-content .yellow-btn{background:transparent url(../img/ui/button.png) 0 14px no-repeat;height:62px;font-family:HelveticaNeueLT-Bold;width:157px;margin-left:-7px;text-align:left;padding-left:40px;cursor:pointer;border:0;position:relative;top:1px}
+.hi-content{background-color:#fff;padding:45px;overflow:hidden}
 .lo-content{background-color:#fff;height:500px;padding:45px;overflow:hidden}
 .lo-content .email-remove-form{display:block;float:left;margin-bottom:10px}
 .lo-content #email-remove-input{height:27px;line-height:27px;background-color:#ddd;border:1px solid #cacaca;margin:0;padding-left:5px;color:grey;float:left}
