--- a/templates/xhtml-templates/10.1.1-home.html
+++ b/templates/xhtml-templates/10.1.1-home.html
@@ -387,7 +387,7 @@
 				<!-- uses html5 search field - might need to add js alternative too -->
 				<input name="search" type="text" value="ENTER KEYWORD OR PRODUCT CODE"  maxlength="50" />
 			</div>
-			<div id="ajax-menu-container"></div>
+			<div id="ajax-menu-container"></div><div id="ajax-search-container"></div>
 		</div>
 		<!-- #header -->
 		
@@ -491,7 +491,7 @@
 					</div>
 				</div>
 				<div class="h-divider"></div>
-				<!-- /section --> 
+				<!-- /section -->
 				
 				<!-- section -->
 				<div class="_410-15-569 social">
@@ -515,6 +515,12 @@
 					<div class="h-divider"></div>
 				</div>
 				<!-- /section --> 
+				
+				<!-- section -->
+				<div class="advert-zone-full-width"><a title="advert zone" href="#"><img src="../img/dummy/header-advert-zone.jpg" width="994" height="244" alt="advert zone" /></a></div>
+				<div class="h-divider"></div>
+				<!-- /section --> 
+				
 			</div>
 		</div>
 		<!-- #content --> 
