--- a/templates/css/ie-7.css
+++ b/templates/css/ie-7.css
@@ -3,7 +3,7 @@
 #footer-email input[type=text]{height:16px}
 #footer-email input[type=submit]{height:30px}
 #prod-list-wysiwyg{line-height:normal!important}
-#mini-basket-items{max-height:none}
+#mini-basket-items, #mini-search-items{max-height:none}
 .yellow-btn{height:45px!important;margin-left:0;padding-top:10px!important}
 #reset-password .yellow-button{margin-top:25px}
 .faq-content .question-input{margin-left:-67px!important;margin-bottom:30px!important}
