--- a/templates/css/main.css
+++ b/templates/css/main.css
@@ -28,7 +28,7 @@ button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}
 #search-box-bg{position:absolute;right:15px;top:50px}
 #search-box input{border:0;padding:5px;background:0;width:225px;color:#656565}
 #top-search-glass{position:absolute;top:4px;right:4px;padding:5px;cursor:pointer}
-#ajax-menu-container{top:99px;right:15px;position:absolute;z-index:9999;color:#171717;display:none}
+#ajax-menu-container, #ajax-search-container{top:99px;right:15px;position:absolute;z-index:9999;color:#171717;display:none}
 .qb-xclose,.yt-xclose,.xclose{float:right;padding:10px 10px 0 0;cursor:pointer}
 #main-menu{top:66px;left:170px;position:absolute}
 .ul-1,.ul-2{margin-left:-25px}
@@ -208,10 +208,12 @@ div:first-child+div>div.check-item-image{margin-top:10px}
 #yt-overlay h3{font-family:HelveticaNeueLT-Roman,Helvetica,Arial,sans-serif;color:#9e9e9e;margin:0;font-weight:normal}
 #yt-overlay iframe{bottom:15px;position:absolute}
 #mini-basket-component{width:466px;text-transform:uppercase;font-size:.7em;background-color:#f6f6f6;background-image:url(../img/ui/header-gradient.png);background-repeat:repeat-x;border:1px #ccc solid}
+#mini-search-component{width:277px;text-transform:uppercase;font-size:.7em;background-color:#f6f6f6;background-image:url(../img/ui/header-gradient.png);background-repeat:repeat-x;border:1px #ccc solid; overflow:hidden}
+#mini-search-component .mini-product-description{margin-top:15px}
 .mini-basket-header{padding:10px}
 #mini-product{float:left}
 #mini-total{float:right;width:80px}
-.mini-basket-row{padding:15px 0 15px 15px;overflow:auto;border-top:1px gray dotted}
+.mini-basket-row, .mini-search-row{padding:15px 0 15px 15px;overflow:auto;border-top:1px gray dotted}
 .mini-product-image{height:80px;width:80px;position:relative;float:left}
 .mini-product-image img{position:absolute;top:0;bottom:0;left:0;right:0;margin:auto}
 .mini-product-description,.item-update,.mini-check-amounts{float:left}
@@ -220,7 +222,8 @@ div:first-child+div>div.check-item-image{margin-top:10px}
 .mini-check-amounts{margin:10px 0 0 0}
 .mini-check-amounts input{border:0;background:#ddd;padding:4px;text-align:center}
 .mini-check-final-price{width:60px;float:left;font-family:HelveticaNeueLT-Bold,Helvetica,Arial,sans-serif;margin:0 10px 0 10px;padding:4px}
-#mini-basket-items{max-height:400px;overflow-y:auto}
+#mini-search-items, #mini-basket-items{max-height:400px;overflow-y:auto}
+#mini-search-items .check-item-item{width:150px}
 .scroll::-webkit-scrollbar{width:12px}
 .scroll::-webkit-scrollbar-track{-webkit-box-shadow:inset 0 0 6px rgba(0,0,0,0.3);border-radius:10px;background-color:#1e1e1e}
 .scroll::-webkit-scrollbar-thumb{border-radius:10px;-webkit-box-shadow:inset 0 0 6px rgba(0,0,0,0.5);background-color:gray}
@@ -229,10 +232,13 @@ div:first-child+div>div.check-item-image{margin-top:10px}
 .mini-basket-offer-discount{float:right;margin-right:10px;padding:0 0 15px}
 .mini-basket-update{float:right;margin-right:0;padding:0 0 10px;width:406px}
 .mini-basket-offer-row{margin-top:10px}
+.no-results p {color:#f05}
 .promo-labelo{padding-right:10px}
 .mini-basket-offer-row input{border:0;font-family:HelveticaNeueLT-Roman,Helvetica,Arial,sans-serif;font-weight:bold;line-height:27px;height:27px;padding:0}
 .mini-basket-offer-row input[type=submit]{width:110px;background:#feea00 url(../img/ui/sign-up.gif);color:#1c1800;padding:0 25px 0 0;margin:0;line-height:27px;height:27px}
 .mini-basket-update-button{float:right}
+.ms-footer{padding:15px;background-color: #e9e9e9;}
+.see-all-results{float:right}
 ._150{width:150px}
 ._110{width:110px}
 #mini-checkout-btn{float:right}
