--- a/templates/xhtml-templates/10.3.10-my-account-man-del-addr.html
+++ b/templates/xhtml-templates/10.3.10-my-account-man-del-addr.html
@@ -387,7 +387,7 @@
 				<!-- uses html5 search field - might need to add js alternative too -->
 				<input name="search" type="text" value="ENTER KEYWORD OR PRODUCT CODE"  maxlength="50" />
 			</div>
-			<div id="ajax-menu-container"></div>
+			<div id="ajax-menu-container"></div><div id="ajax-search-container"></div>
 		</div>
 		<!-- #header -->
 		
