--- a/templates/xhtml-templates/10.1.3-product-listing.html
+++ b/templates/xhtml-templates/10.1.3-product-listing.html
@@ -30,6 +30,7 @@
 			</div>
 			<div id="account-menu">
 				<div class="acc-menu-item"><a class="basket-over" href="#"><span>[2 Items]</span></a></div>
+				<div class="acc-menu-item"><a class="basket-over" href="#"><span class="pound">&pound;3619.92</span></a></div>
 				<div class="acc-menu-item"><a class="basket-over" href="#" style="color:#656565">Cart</a></div>
 				<div class="acc-menu-item"><a class="basket-over" href="#"><img src="../img/ui/trolley.png" alt='Cart' title='2 items' height="34" width="36" /></a></div>
 				<div class="acc-menu-item"><a href="#"><span>Login/Register</span></a></div>
@@ -461,7 +462,7 @@
 										<div class="product-img-a"><img src="../img/dummy/rego-rapid-0-05.png" alt="SiS Rego Rapid Recovery 50g" title="SiS Rego Rapid Recovery 50g" width="174" height="188" /></div>
 										<div class="product-info-container-a">
 											<div class="product-name-a near-black">SiS Rego Rapid Recovery 50g</div>
-											<div class="product-price-a"><span class="pound">&pound;</span>1.50</div>
+											<div class="product-price-a"><span class="from grey">From: </span><span class="pound">&pound;</span>1.50</div>
 											<div class="product-info-a"><a href="#" class="get-info" title="Info"><span>Info</span></a></div>
 											<div class="product-buy-a">
 												<input class="buy-button" type="submit" value="Buy" />
