--- a/templates/xhtml-templates/10.3.10-my-account-man-del-addr.html
+++ b/templates/xhtml-templates/10.3.10-my-account-man-del-addr.html
@@ -30,6 +30,7 @@
 			</div>
 			<div id="account-menu">
 				<div class="acc-menu-item"><a class="basket-over" href="#"><span>[2 Items]</span></a></div>
+				<div class="acc-menu-item"><a class="basket-over" href="#"><span class="pound">&pound;3619.92</span></a></div>
 				<div class="acc-menu-item"><a class="basket-over" href="#" style="color:#656565">Cart</a></div>
 				<div class="acc-menu-item"><a class="basket-over" href="#"><img src="../img/ui/trolley.png" alt='Cart' title='2 items' height="34" width="36" /></a></div>
 				<div class="acc-menu-item"><a href="#"><span>Login/Register</span></a></div>
