--- a/templates/xhtml-templates/10.3.8-my-account-wishlist.html
+++ b/templates/xhtml-templates/10.3.8-my-account-wishlist.html
@@ -597,19 +597,19 @@
 			<div class="qb-form">
 				<form action="#" method="post" name="add-to-basket" target="_self">
 					<div id="qb-dd-product-selectors">
-						<select id="prod-selection-1" name="prod-selection-1">
-							<option>Size</option>
-							<option value="sel1-1">1.6kg (20 servings)</option>
-							<option value="sel1-2">500g (8 servings)</option>
-							<option value="sel1-3">50g (1 serving)</option>
-							<option value="sel1-4">1.6kg (20 servings)</option>
-						</select>
-						<select id="prod-selection-2" name="prod-selection-2" >
+						<select id="qb-prod-selection-2" name="prod-selection-2" >
 							<option >Flavour</option>
 							<option value="sel2-1">Chocolate</option>
 							<option value="sel2-2">Banana</option>
 							<option value="sel2-3">Vanilla</option>
 							<option value="sel2-4">Strawberry</option>
+						</select>
+						<select id="qb-prod-selection-1" name="prod-selection-1">
+							<option>Size</option>
+							<option value="sel1-1">1.6kg (20 servings)</option>
+							<option value="sel1-2">500g (8 servings)</option>
+							<option value="sel1-3">50g (1 serving)</option>
+							<option value="sel1-4">1.6kg (20 servings)</option>
 						</select>
 						<button class="yellow-btn">Add To Basket</button>
 					</div>
