--- a/templates/xhtml-templates/10.2.5-non-members-checkout-addr.html
+++ b/templates/xhtml-templates/10.2.5-non-members-checkout-addr.html
@@ -15,9 +15,8 @@
 		<div id="container">
 			<div id="wrapper">
 				<div id="header">
-					<div id="SiS-logo"><a href="http://www.scienceinsport.com"><img src="../img/ui/sis.png" alt="Science in Sport logo" title="SiS" height="78" width="163" /></a></div>
+					<div id="SiS-logo"><img src="../img/ui/sis.png" alt="Science in Sport logo" title="SiS" height="78" width="163" /></div>
 					<div id="account-menu">
-						<div class="acc-menu-item"><a class="basket-over" href="#"><span>[2 Items]</span></a></div>
 						<div class="acc-menu-item"><a class="basket-over" href="#" style="color:#656565">Cart</a></div>
 						<div class="acc-menu-item"><a class="basket-over" href="#"><img src="../img/ui/trolley.png" alt='Cart' title='2 items' height="34" width="36" /></a></div>
 						<div class="acc-menu-item"><a href="#"><span>Home</span></a></div>
