--- a/templates/xhtml-templates/10.1.4-search-results.html
+++ b/templates/xhtml-templates/10.1.4-search-results.html
@@ -417,11 +417,8 @@
 								</div>
 								<h2 class="near-black">Product Matches</h2>
 								<div class="search-list-pagination">
-									<div class="pag-pos small near-black">
-										<p>DISPLAYING 08-340</p>
-									</div>
 									<div class="pag-controls small near-black">
-										<p><a href="#" class="pag-prev pag-disabled">PREVIOUS</a> <a href="#" class="pag-next">NEXT</a> <a href="#" class="pag-disabled">1</a> <a href="#">2</a> ... <a href="#">VIEW ALL</a></p>
+										<p><a href="#" class="pag-prev pag-disabled">PREVIOUS</a> ... <a href="#" class="pag-disabled">1</a> <a href="#">2</a> ... <a href="#" class="pag-next">NEXT</a> </p>
 									</div>
 								</div>
 								<div id="product-search-list">
@@ -500,11 +497,9 @@
 									Your search for 'SiS Rego Rapid Recovery' has returned 25 product matches and 11 article matches </div>
 								<h2 class="near-black">Article Matches</h2>
 								<div class="search-list-pagination">
-									<div class="pag-pos small near-black">
-										<p>DISPLAYING 08-340</p>
-									</div>
+									
 									<div class="pag-controls small near-black">
-										<p><a href="#" class="pag-prev pag-disabled">PREVIOUS</a> <a href="#" class="pag-next">NEXT</a> <a href="#" class="pag-disabled">1</a> <a href="#">2</a> ... <a href="#">VIEW ALL</a></p>
+										<p><a href="#" class="pag-prev pag-disabled">PREVIOUS</a> ... <a href="#" class="pag-disabled">1</a> <a href="#">2</a> ... <a href="#" class="pag-next">NEXT</a> </p>
 									</div>
 								</div>
 								<div class="clear"></div>
@@ -537,21 +532,15 @@
 							<div class="bottom-page-spacer" style="clear:both"></div>
 							<div class="col-left">
 								<div class="search-list-pagination">
-									<div class="pag-pos small near-black">
-										<p>DISPLAYING 08-340</p>
-									</div>
 									<div class="pag-controls small near-black">
-										<p><a href="#" class="pag-prev pag-disabled">PREVIOUS</a> <a href="#" class="pag-next">NEXT</a> <a href="#" class="pag-disabled">1</a> <a href="#">2</a> ... <a href="#">VIEW ALL</a></p>
+										<p><a href="#" class="pag-prev pag-disabled">PREVIOUS</a> ... <a href="#" class="pag-disabled">1</a> <a href="#">2</a> ... <a href="#" class="pag-next">NEXT</a> </p>
 									</div>
 								</div>
 							</div>
 							<div class="col-right">
 								<div class="search-list-pagination">
-									<div class="pag-pos small near-black">
-										<p>DISPLAYING 08-340</p>
-									</div>
 									<div class="pag-controls small near-black">
-										<p><a href="#" class="pag-prev pag-disabled">PREVIOUS</a> <a href="#" class="pag-next">NEXT</a> <a href="#" class="pag-disabled">1</a> <a href="#">2</a> ... <a href="#">VIEW ALL</a></p>
+										<p><a href="#" class="pag-prev pag-disabled">PREVIOUS</a> ... <a href="#" class="pag-disabled">1</a> <a href="#">2</a> ... <a href="#" class="pag-next">NEXT</a> </p>
 									</div>
 								</div>
 							</div>
