--- a/templates/xhtml-templates/10.1.5-product.html
+++ b/templates/xhtml-templates/10.1.5-product.html
@@ -602,7 +602,7 @@
 							<p>DISPLAYING 08-340</p>
 						</div>
 						<div class="pag-controls small near-black">
-							<p><a href="#" class="pag-prev pag-disabled">PREVIOUS</a> <a href="#" class="pag-next">NEXT</a> <a href="#" class="pag-disabled">1</a> <a href="#">2</a> ... <a href="#">VIEW ALL</a></p>
+							<p><a href="#" class="pag-prev pag-disabled">PREVIOUS</a> ... <a href="#" class="pag-disabled">1</a> <a href="#">2</a> ... <a href="#" class="pag-next">NEXT</a> </p>
 						</div>
 					</div>
 					<div class="clear"></div>
