--- a/templates/xhtml-templates/10.3.5-my-account-order-history.html
+++ b/templates/xhtml-templates/10.3.5-my-account-order-history.html
@@ -409,7 +409,7 @@
 					<!-- pagination -->
 					<div class="prod-list-pagination">
 						<div class="pag-controls small near-black">
-							<p><a href="#" class="pag-prev pag-disabled">PREVIOUS</a> <a href="#" class="pag-next">NEXT</a> <a href="#" class="pag-disabled">1</a> <a href="#">2</a> ... <a href="#">VIEW ALL</a></p>
+							<p><a href="#" class="pag-prev pag-disabled">PREVIOUS</a> ... <a href="#" class="pag-disabled">1</a> <a href="#">2</a> ... <a href="#" class="pag-next">NEXT</a> </p>
 						</div>
 					</div>
 					<div class="history-list">
@@ -444,7 +444,7 @@
 					<!-- pagination -->
 					<div class="prod-list-pagination">
 						<div class="pag-controls small near-black">
-							<p><a href="#" class="pag-prev pag-disabled">PREVIOUS</a> <a href="#" class="pag-next">NEXT</a> <a href="#" class="pag-disabled">1</a> <a href="#">2</a> ... <a href="#">VIEW ALL</a></p>
+							<p><a href="#" class="pag-prev pag-disabled">PREVIOUS</a> ... <a href="#" class="pag-disabled">1</a> <a href="#">2</a> ... <a href="#" class="pag-next">NEXT</a> </p>
 						</div>
 					</div>
 				</div>
