--- a/templates/css/main.css
+++ b/templates/css/main.css
@@ -6,7 +6,7 @@
 .grey{color:#9e9e9e}
 .black{color:#000}
 .red{color:#f05}
-h1,h2,h3,h4,.near-black{color:#151515}
+h1,h2,h3,h4,.near-black{color:#151515; font-family:HelveticaNeueLT-Bold,Helvetica,Arial,sans-serif; font-weight:normal}
 .small{font-size:12px}
 .bold{font-family:HelveticaNeueLT-Bold,Helvetica,Arial,sans-serif}
 .right{text-align:right}
@@ -256,7 +256,7 @@ div:first-child+div>div.check-item-image{margin-top:10px}
 #prod-list-wysiwyg{line-height:.5em;height:60px}
 .prod-list-pagination{text-transform:uppercase;font-family:HelveticaNeueLT-Bold,Arial,Helvetica,sans-serif}
 .prod-list-pagination .pag-pos{float:left;width:200px}
-.prod-list-pagination .pag-controls{float:right;width:200px;text-align:right}
+.prod-list-pagination .pag-controls{float:right;width:300px;text-align:right}
 .prod-list-pagination a{color:#151515}
 .prod-list-pagination a:hover{text-decoration:underline}
 .prod-list-pagination .pag-disabled{color:#9e9e9e}
