--- a/templates/xhtml-templates/10.1.3-product-listing.html
+++ b/templates/xhtml-templates/10.1.3-product-listing.html
@@ -422,20 +422,14 @@
 								<div id="group-title">
 									<h3>SiS Rego Rapid Recovery</h3>
 								</div>
-								<div id="prod-list-info">
-									<p>Satisfaction Guaranteed</p>
-									<p class="small grey">If you aren't happy with your purchase just return it for a full refund</p>
-								</div>
+								
 							</div>
 							<div class="clear"></div>
 							
 							<!-- pagination -->
 							<div class="prod-list-pagination">
-								<div class="pag-pos small near-black">
-									<p>DISPLAYING 08-340</p>
-								</div>
 								<div class="pag-controls small near-black">
-									<p><a href="#" class="pag-prev pag-disabled">PREVIOUS</a> <a href="#" class="pag-next">NEXT</a> <a href="#" class="pag-disabled">1</a> <a href="#">2</a> ... <a href="#">VIEW ALL</a></p>
+									<p><a href="#" class="pag-prev pag-disabled">PREVIOUS</a> ... <a href="#" class="pag-disabled">1</a> <a href="#">2</a> ... <a href="#" class="pag-next">NEXT</a> </p>
 								</div>
 							</div>
 							<div class="clear"></div>
@@ -503,11 +497,8 @@
 							
 							<!-- pagination -->
 							<div class="prod-list-pagination">
-								<div class="pag-pos small near-black">
-									<p>DISPLAYING 08-340</p>
-								</div>
 								<div class="pag-controls small near-black">
-									<p><a href="#" class="pag-prev pag-disabled">PREVIOUS</a> <a href="#" class="pag-next">NEXT</a> <a href="#" class="pag-disabled">1</a> <a href="#">2</a> ... <a href="#">VIEW ALL</a></p>
+									<p><a href="#" class="pag-prev pag-disabled">PREVIOUS</a> ... <a href="#" class="pag-disabled">1</a> <a href="#">2</a> ... <a href="#" class="pag-next">NEXT</a> </p>
 								</div>
 							</div>
 							<div class="clear"></div>
