--- a/templates/xhtml-templates/10.1.5-product.html
+++ b/templates/xhtml-templates/10.1.5-product.html
@@ -413,12 +413,9 @@
 						<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-527cbf90633d0508"></script> 
 						<!-- AddThis Button END --> 
 					</div>
-					<div class="clear"></div>
-					<div class="product-top-info">
-						<h3 class="near-black bold">SiS Rego Rapid Recovery</h3>
-						<div id="product-breadcrumb-menu" class="grey small">Shop &gt;  SiS Rego Range &gt;  SiS Rego Rapid Recovery Range &gt; <span class="current near-black"> SiS Rapid Recovery 1.6kg</span></div>
-					</div>
-					<div class="product-top-wysiwyg"> <span class="small near-black bold">Satisfaction Guaranteed</span><br />
+					
+					
+					<div class="product-top-wysiwyg"> <span class="near-black bold">Satisfaction Guaranteed</span><br />
 						<span class="small grey">If you aren't happy with your purchase just return it for a full refund</span> </div>
 					<div class="clear"></div>
 					<!--left column -->
@@ -597,15 +594,8 @@
 						<!-- end loop -->
 					</form>
 					<!-- pagination -->
-					<div class="prod-list-pagination">
-						<div class="pag-pos small near-black">
-							<p>DISPLAYING 08-340</p>
-						</div>
-						<div class="pag-controls small near-black">
-							<p><a href="#" class="pag-prev pag-disabled">PREVIOUS</a> ... <a href="#" class="pag-disabled">1</a> <a href="#">2</a> ... <a href="#" class="pag-next">NEXT</a> </p>
-						</div>
-					</div>
-					<div class="clear"></div>
+					
+					<div class="clear">&nbsp;</div>
 					<div><img src="../img/dummy/payment-logos.png" alt="Card logos" /></div>
 				</div>
 			</div>
