--- a/templates/css/main.css
+++ b/templates/css/main.css
@@ -115,7 +115,7 @@ div:first-child+div>div.check-item-image{margin-top:10px}
 .delivery-title{height:20px}
 .check-item-price,.price-title{width:62px;float:left;font-size:16px;padding-left:20px}
 .check-amounts,.quantity-title{width:62px;float:left;padding-left:45px}
-.check-amounts input{border:0;background:#ddd;padding:4px}
+.check-amounts input{border:0;background:#ddd;padding:4px;text-align: center;}
 .check-final-price,.total-title{float:right;text-align:right}
 .check-final-price,.check-discount-amount{font-size:18px;color:#9e9e9e;float:right;font-family:HelveticaNeueLT-Bold,Helvetica,Arial,sans-serif}
 .check-discount-amount{line-height:30px}
@@ -506,7 +506,8 @@ fieldset{border:0}
 input#register-signup-newsletter,input#account-register-signup-newsletter{margin-bottom:0;margin-top:20px;width:15px}
 #update-newsletter fieldset label.next-line{padding-left:0;clear:both}
 #checkout-register-form .yellow-button-wide,#non-member-delivery-form .yellow-button-wide,#delivery-info-form .yellow-button-wide{float:right}
-.error{display:none;clear:both;float:left}
+.error{clear:both;float:left}
+.empty-basket{color:#f05; margin:15px 0}
 #register-newsletter,#account-register-newsletter{float:left;clear:both;width:407px;border-top:dotted 1px #000}
 #register-newsletter legend,#account-register-newsletter legend{color:#9e9e9e;font-size:14px;padding:12px 0 5px 0;height:14px}
 #register-newsletter input[type="radio"],#account-register-newsletter input[type="radio"]{float:left;clear:none;margin-right:17px;margin-bottom:0;height:18px;background-position:53px -11px}
