--- a/templates/xhtml-templates/10.2.4-checkout-register.html
+++ b/templates/xhtml-templates/10.2.4-checkout-register.html
@@ -25,10 +25,9 @@
 				<!-- #header -->
 				<div id="content" class="checkout-pages">
 					<div id="ad-title-space">
-						<h1 class="check-page-title">
-							SiS Checkout
+						<h1 class="check-page-title">&nbsp;
+							
 						</h1>
-						<p class="h1-sub-heading grey">Free delivery on all UK orders.</p>
 					</div>
 					<div id="grey-bg-wrapper">
 						<div id="checkout-breadcrumb-menu" class="left grey"><span class="current black">Welcome</span> &raquo; Delivery Address &amp; Delivery Options &raquo; Payment &raquo; Receipt</div>
@@ -40,12 +39,13 @@
 									<p class="grey">* Required fields are marked with an asterisk</p>
 									<p>Please enter your details</p>
 									<p class="error">Please enter a valid email address</p>
-									<p class="error">The email address is already registered, please sign in with the email address or enter a different email address</p>
+									<p class="error">The email address is already registered,<br />please sign in with the email address or<br />enter a different email address</p>
 									<label for="register-email-address">Email Address*</label>
 									<input id="register-email-address" type="text" name="register-email-address" maxlength="128" />
 									<p class="error">Please select a title</p>
-									<label for="register-title"> Title</label>
+									<label for="register-title"> Title*</label>
 									<select id="register-title">
+										<option>Please Select</option>
 										<option>Mr</option>
 										<option>Mrs</option>
 										<option>Miss</option>
@@ -64,7 +64,7 @@
 									<p class="error">Password must consist of a minimum of 6 characters</p>
 									<label for="register-password">Password*</label>
 									<input id="register-password" type="text" name="register-first-name" maxlength="64"  />
-									<p class="error">Please ensure your password and confirm password match</p>
+									<p class="error">Please ensure your password and confirm<br />password match</p>
 									<label for="register-confirm-password">Confirm Password*</label>
 									<input id="register-confirm-password" type="text" name="register-confirm-password" maxlength="64" />
 								</div>
@@ -73,8 +73,9 @@
 									<p class="grey">*Required fields are marked with an asterisk</p>
 									<p>Please enter your delivery address</p>
 									<p class="error">Please select a title</p>
-									<label for="register-delivery-title"> Title</label>
+									<label for="register-delivery-title"> Title*</label>
 									<select id="register-delivery-title">
+										<option>Please Select</option>
 										<option>Mr</option>
 										<option>Mrs</option>
 										<option>Miss</option>
